fix: align header nav on animal pages

--- a/online-zoo/pages/zoos-translation/panda/panda.css
+++ b/online-zoo/pages/zoos-translation/panda/panda.css
@@ -80,10 +80,10 @@ li {
 }
 .nav-wrapper img {
   width: 52px;
-  margin-right: 92px;
+  margin-right: 82px;
 }
 .nav-wrapper nav {
-  margin-left: 89px;
+  margin-left: 92px;
   margin-top: 4px;
 }
 .nav-wrapper nav ul {
